<resources>
    <string name="app_name">Exámen</string>
    <string name="title_movies">Peliculas</string>
    <string name="title_user">Usuario</string>
    <string name="title_locations">Ubicaciones</string>
    <string name="date_releasing"><![CDATA[<b> %1$s </b>]]></string>
    <string name="details_movie"><![CDATA[ <b>%s</b><br/><br/><b>%s</b><br/>Calificación : <b>%s</b><br/>Votos : <b>%s</b><br/>Idioma : <b>%s</b>]]></string>
    <string name="description"><![CDATA[ <b>Descripción : </b> <br/><br/>%s </b>]]></string>
    <string name="user_values">Bienvenido<![CDATA[<br/><br/><b>%s</b><br/>Id : <b> %s </b><br/>País : <b> %s </b><br/>Idioma : <b> %s </b><br/>Nombre : <b> %s </b><br/>Contenido para adultos : <b> %s</b>]]></string>

    <string name="location_values"><![CDATA[ Latitud : %s Longitud : %s]]></string>


    <string name="user_image">Imágen del usuario</string>
    <string name="backdrop_image">Imagen de fondo</string>
    <string name="poster_image">Poster de la pelicula</string>
    <string name="best_rated">Pantalla Peliculas mejor calificadas</string>
     <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="no_registered">No registrado</string>
    <string name="no_internet">No se detecta conexión a internet</string>
    <string name="rated_by_me">Peliculas calificadas por mi</string>
    <string name="my_location">Mi ubicación</string>
    <string name="no_locations">No hay ubicaciones para visualizar</string>
    <string name="get_current_location">Boton obtener ubicación actual</string>
    <string name="enable_gps">Por favor habilite su GPS</string>
    <string name="wait_n_seconds">Espere 2 segundos para intentar de nuevo</string>
    <string name="photos">Fotos</string>
    <string name="detalle_pelicula">Detalle Pelicula</string>
    <string name="load_image">Cargar imagen desde galeria</string>
    <string name="Take_photo">Tomar foto</string>
    <string name="taken_photo">Imagen tomada</string>
    <string name="no_value" />
    <string name="decimal_two_pos">#.#</string>
    <string name="key_id">id</string>
    <string name="key_adult">adult</string>
    <string name="backdrop_path">backdropPath</string>
    <string name="orig_languaje">originalLanguage</string>
    <string name="orig_title">originalTitle</string>
    <string name="overview">overview</string>
    <string name="popularity">popularity</string>
    <string name="posterpath">posterPath</string>
    <string name="releasedate">releaseDate</string>
    <string name="title">title</string>
    <string name="video">video</string>
    <string name="votes">voteAverage</string>
    <string name="vote_count">voteCount</string>
    <string name="tvalue_bar">Descripción</string>
    <string name="channel">LOCATIONS_CHANNEL</string>
    <string name="channel_description">Canal para notificar registros de ubicación</string>
    <string name="register_location">Ubicación registrada en la nube</string>
    <string name="view_locations">Ver ubicaciones guardadas</string>
    <string name="location_on">Ubicación registrada en :</string>
    <string name="no_values">No hay valores para mostrar</string>
    <string name="select_images">Elija sus imágenes</string>
</resources>