<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="org.samtech.exam.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_open_movie_detail"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies"
        android:name="org.samtech.exam.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="org.samtech.exam.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="org.samtech.exam.generics.MovieDetailFragment"
        android:label="@string/detalle_pelicula"
        tools:layout="@layout/fragment_movie_detail" />

    <fragment
        android:id="@+id/navigation_photos"
        android:name="org.samtech.exam.ui.photos.PhotosFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photos" />

</navigation>